popup:html&css, background.js, manifest.json
added popup.css, edited popup.html,  eventPage = background, references edited in manifest

--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title> DEFINITY </title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+        <link rel="stylesheet" href="popup.css">
+        <script src="js/popup.js"></script>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    </head>
+</html>
