--- a/popup.html
+++ b/popup.html
@@ -9,4 +9,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
     </head>
+<body>
+    <div id="header">
+        <ul id="parent">
+          <li><img src="../assets/icon/128.png"></li>
+          <li><h1>DEFINITY</h1></li>
+        </ul>
+      </div>
+      <form>
+
+        <div id = "temp">
+          <fieldset>
+            <!--<label for="textarea">Input Text</label>*/-->
+            <textarea name="textarea" id="textarea" placeholder="Input the text you want to check"></textarea>
+          </fieldset>
+    
+          <fieldset>
+            <legend>Check for:</legend>
+          <div id="checkButtons">
+                <button id="FakeNews_button">Fake News</button>
+                <button id="NewsOrigin_button">News Origin</button>
+          </div>
+          </fieldset>
+          <!-- <button>Submit</button> -->
+        </div>
+        <h3> Results: </h3> <span> </span> </h3>
+      </form>
+</body>
 </html>
