image color change, UI changes

--- a/popup.html
+++ b/popup.html
@@ -12,8 +12,8 @@
 <body>
     <div id="header">
         <ul id="parent">
-          <li><img src="../assets/icon/72.png"></li>
-          <li><h1>DEFINITY</h1></li>
+          <li><h1 style="color: aliceblue;">DEFINITY</h1></li>
+          <li><img src="../assets/icon/48.png"></li>
         </ul>
       </div>
       <form>
@@ -33,7 +33,7 @@
           </fieldset>
           <!-- <button>Submit</button> -->
         </div>
-        <h3> Results: </h3> <span> </span> </h3>
+        <h3 style="color: aliceblue;"> Results: </h3> <span> </span> </h3>
       </form>
 </body>
 </html>
