--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <script src="js/jquery.js" crossorigin="anonymous"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="js/popup.js"></script>
+        <script src="js/1.js"></script>
     </head>
 <body>
     <div id="header">
